Fix: double percentage character in locale messages for recap

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -184,13 +184,13 @@
             "firstOfDifficulty": "You've solved your first @:{difficultyKey} puzzle.",
             "firstOfSize": "First time solving a {dimensions} puzzle.",
             "firstOfSizeDifficulty": "First time solving a [{dimensions}] puzzle on @:{difficultyKey} difficulty.",
-            "timeRecordLarge": "You were an incredible {improvementPercentage}% faster than your previous best time!",
+            "timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!",
             "timeRecord": "You've improved your best time by {differenceSec}s!",
             "replayTimeRecord": "This is the {numPlaysOrdinal} time you solved this exact puzzle. You were {differenceSec}s faster than your fastest time.",
             "almostTimeRecordAbsolute": "Ooph, so close to setting a new time record. You were only {differenceSec}s slower then your personal best.",
-            "almostTimeRecordPercentage": "You almost set a new time record! You were only {differencePercentage}% slower.",
+            "almostTimeRecordPercentage": "You almost set a new time record! You were only {differencePercentage} slower.",
             "muchBetterThanAverageAbsolute": "You solved this puzzle faster than your average by an incredible {differenceSec}s!",
-            "muchBetterThanAveragePercentage": "That was much faster than average! You were {improvementPercentage}% faster.",
+            "muchBetterThanAveragePercentage": "That was much faster than average! You were {improvementPercentage} faster.",
             "betterThanAverage": "You were {differenceSec}s faster than your previous average.",
             "worstEver": "This was your toughest challenge yet, setting a new personal record for the longest time taken.",
             "nearlyWorstEver": "Almost your slowest solve, but you still managed to beat your personal worst time!",
