--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -184,13 +184,13 @@
             "firstOfDifficulty": "Je hebt je eerste puzzel op het '@:{difficultyKey}' niveau opgelost.",
             "firstOfSize": "Eerste keer een {dimensions} puzzel opgelost.",
             "firstOfSizeDifficulty": "Eerste keer een [{dimensions}] puzzel opgelost op het '@:{difficultyKey}' niveau.",
-            "timeRecordLarge": "Je was een ongelooflijke {improvementPercentage}% sneller dan je vorige beste tijd!",
+            "timeRecordLarge": "Je was een ongelooflijke {improvementPercentage} sneller dan je vorige beste tijd!",
             "timeRecord": "Je hebt je beste tijd verbeterd met {differenceSec}s!",
             "replayTimeRecord": "Dit is de {numPlaysOrdinal} keer dat je deze exacte puzzel hebt opgelost. Je was {differenceSec}s sneller dan je snelste tijd.",
             "almostTimeRecordAbsolute": "Oef, zo dichtbij het zetten van een nieuw tijdrecord. Je was slechts {differenceSec}s langzamer dan je persoonlijk record.",
-            "almostTimeRecordPercentage": "Je was bijna een nieuw tijdrecord aan het zetten! Je was slechts {differencePercentage}% langzamer.",
+            "almostTimeRecordPercentage": "Je was bijna een nieuw tijdrecord aan het zetten! Je was slechts {differencePercentage} langzamer.",
             "muchBetterThanAverageAbsolute": "Je hebt deze puzzel sneller opgelost dan je gemiddelde met een ongelooflijke {differenceSec}s!",
-            "muchBetterThanAveragePercentage": "Dat was veel sneller dan gemiddeld! Je was {improvementPercentage}% sneller.",
+            "muchBetterThanAveragePercentage": "Dat was veel sneller dan gemiddeld! Je was {improvementPercentage} sneller.",
             "betterThanAverage": "Je was {differenceSec}s sneller dan je vorige gemiddelde.",
             "worstEver": "Dit was je zwaarste uitdaging tot nu toe, een nieuw persoonlijk record voor de langste tijd genomen.",
             "nearlyWorstEver": "Bijna je langzaamste oplossing, maar je hebt toch je persoonlijk slechtste tijd verslagen!",
