Fix missing DarkModeSetting current browser pref locale message

--- a/src/locales/settings/en.json
+++ b/src/locales/settings/en.json
@@ -10,7 +10,7 @@
             "light": "Light",
             "dark": "Dark",
             "auto": "Auto",
-            "autoDescription": "Automatically change theme based on browser/system setting (currently: @.lower:{currentTheme})"
+            "autoDescription": "Automatically change theme based on browser/system setting (currently: {currentTheme})"
         },
         "themes": {
             "classic": "Classic",
