Fallback Hint shown if no hint was found

--- a/src/locales/hints/en.json
+++ b/src/locales/hints/en.json
@@ -8,6 +8,10 @@
 			"row": "row",
 			"column": "column"
 		},
+		"none-found": {
+			"no-hint-found": "No hint found",
+			"no-hint-found-too-hard-message": "Woops! This puzzle is hard, and no hint was found, sorry!"
+		},
 		"Triples": {
 			"name": "Triples",
 			"pair": "pair",
