--- a/src/locales/hints/nl.json
+++ b/src/locales/hints/nl.json
@@ -6,7 +6,30 @@
 			"cell": "cel",
 			"cells": "cellen",
 			"surrounding-cells": "de aangrenzende cellen",
-			"adjacent-cell": "de aangrenzende cel"
+			"adjacent-cell": "de aangrenzende cel",
+
+			"actionLabel": {
+				"locate": "Laat zien",
+				"back": "Terug",
+				"apply": "Toepassen",
+				"execute": "Toepassen",
+				"fix": "Herstel"
+			}			
+		},
+		"NoHintsFound": {
+			"name": "Geen hint gevonden",
+			"message": "Oeps! Deze puzzel is moeilijk, en er is geen hint gevonden, sorry! In plaats daarvan kan een willekeurige cel worden onthuld."
+		},
+		"EliminationCommon": {},
+		"EliminationGeneric": {
+			"name": "Eliminatie",
+			"generic": "algemeen",
+			"message-1-single-target": "Er is een @:{rowOrColumn} op het bord waar de juiste @:{symbolOrColor} van een cel kan worden afgeleid door onmogelijke combinaties uit te sluiten.",
+			"message-1-multiple-targets": "Er is een @:{rowOrColumn} op het bord waar enkele juiste zetten kunnen worden afgeleid door onmogelijke combinaties uit te sluiten.",
+			"message-2-single-target": "In deze @:{rowOrColumn} kan één cel slechts één @:{symbolOrColor} bevatten, omdat het anders zou resulteren in een ongeldige @:{rowOrColumn}.",
+			"message-2-multiple-targets": "In deze @:{rowOrColumn} kunnen sommige cellen slechts één @:{symbolOrColor} bevatten, omdat het anders zou resulteren in een ongeldige @:{rowOrColumn}.",
+			"message-3-single-target": "Deze cel kan worden afgeleid door onmogelijke combinaties van de resterende @:{symbolOrColorPlural} uit te sluiten.",
+			"message-3-multiple-targets": "Deze cellen kunnen worden afgeleid door onmogelijke combinaties van de resterende @:{symbolOrColorPlural} uit te sluiten."
 		},
 		"Triples": {
 			"name": "Drielingen",
@@ -28,6 +51,11 @@
 			"message-2-odd": "Deze @:{rowOrColumn} vereist {reqZero} @:{zeros}, en {reqOne} @:{ones}, en alle @:{sourceSymbols} zijn geplaatst.",
 			"message-3-single-target": "Om deze @:{rowOrColumn} te balanceren, zodat er {reqZero} @:{zeros} en {reqOne} @:{ones} zijn, moet @:{target} in deze cell geplaatst worden.",
 			"message-3-multiple-targets": "Om deze @:{rowOrColumn} te balanceren, zodat er {reqZero} @:{zeros} en {reqOne} @:{ones} zijn, moeten @:{targets} in deze cellen geplaatst worden."
+		},
+		"IncorrectValues": {
+			"name": "Fouten",
+			"message-1": "Je hebt enkele fouten gemaakt.",
+			"message-2": "De gemarkeerde cellen zijn incorrect. Je kunt deze fouten automatisch verwijderen of handmatig je fouten corrigeren."
 		}
 	}
 }
