--- a/src/locales/hints/en.json
+++ b/src/locales/hints/en.json
@@ -13,7 +13,8 @@
 				"back": "Back",
 				"apply": "Apply",
 				"execute": "Execute",
-				"fix": "Fix"
+				"fix": "Fix",
+				"next": "Next"
 			}
 		},
 		"NoHintsFound": {
