Rework recap-message and recapStats(store).
Squashed commit of the following:

commit c1fc311e921f77654f800671c4febb1400d39b0b
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 13:13:27 2024 +0100

    Remove old recap-stats and recap-message modules/store

commit d67bc2159f67c4a419dd610ee08099424dc9a80f
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 13:09:42 2024 +0100

    Record message also displays when first time solved puzzle of type

commit a5f4a597d54725bfc895bfb74c0264dc886a5073
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 13:06:03 2024 +0100

    Replay recap messages implemented

commit 84f3d707d3ee8faad1f512f84acfac94ae95465b
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 12:48:37 2024 +0100

    Add replay stats to GameEndStats

commit be52f5ee441d057ce3feceb1e03b33753fe56f01
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 12:39:50 2024 +0100

    Remove unused code/locale messages

commit 842fad363921af480ae18e9d0dda380b4ab02a73
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 12:36:06 2024 +0100

    Recap message configs for amount of plays

commit 826fd33c1317ccca31296c272e204e45d2bc4742
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 12:20:12 2024 +0100

    Recap message configs for better than average and variants

commit 9e81babeca233feb2b788fba1735e196e710af56
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 10:52:21 2024 +0100

    Additional recap message configs with time record

commit e9bce2071b2a6a25e0838a14d41d2844baa01dad
Author: Thilerion <michaelvanm@gmail.com>
Date:   Thu Mar 28 10:51:37 2024 +0100

    Fix bug in get hardest config played; was reverse

commit fad41f9b27a8cfc23517b4b80a2e451c425956eb
Author: Thilerion <michaelvanm@gmail.com>
Date:   Wed Mar 27 17:34:10 2024 +0100

    Display new recap message

commit 8c6d981004880d7042d923737a9ecb5374788065
Author: Thilerion <michaelvanm@gmail.com>
Date:   Wed Mar 27 17:32:16 20

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -167,7 +167,6 @@
 			"hardestEver": "This was the hardest puzzle you've ever solved, well done!",
 			"muchBetterThanAverageAbsolute": "You solved this puzzle faster than your average by an incredible {differenceSec}s!",
 			"muchBetterThanAveragePercentage": "That was much faster than average! You were {improvementPercentage} faster.",
-			"nearlyWorstEver": "Almost your slowest solve, but you still managed to beat your personal worst time!",
 			"notAddedToDbCheats": "Puzzle was not saved in your history, because you used cheats.",
 			"playsConfigToday": "You've played {count} puzzles with {dimensions} dimensions today at @:{difficultyKey} difficulty.",
 			"playsConfigTotal": "You've solved a total of {count} puzzles with {dimensions} dimensions at @:{difficultyKey} difficulty.",
@@ -176,8 +175,7 @@
 			"replayPlaysTotal": "This is the {numPlaysOrdinal} time you've solved this exact same puzzle, with your best time being {bestPreviousTimeMinSec}.",
 			"replayTimeRecord": "This is the {numPlaysOrdinal} time you solved this exact puzzle. You were {differenceSec}s faster than your fastest time.",
 			"timeRecord": "You've improved your best time by {differenceSec}s!",
-			"timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!",
-			"worstEver": "This was your toughest challenge yet, setting a new personal record for the longest time taken."
+			"timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!"
 		},
 		"play-again": "Play again",
 		"record": {
