Top 5 percent recap message

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -175,7 +175,8 @@
 			"replayPlaysTotal": "This is the {numPlaysOrdinal} time you've solved this exact same puzzle, with your best time being {bestPreviousTimeMinSec}.",
 			"replayTimeRecord": "This is the {numPlaysOrdinal} time you solved this exact puzzle. You were {differenceSec}s faster than your fastest time.",
 			"timeRecord": "You've improved your best time by {differenceSec}s!",
-			"timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!"
+			"timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!",
+			"top5Percent": "Fantastic job! You've completed this puzzle faster than 95% of your previously solved puzzles."
 		},
 		"play-again": "Play again",
 		"record": {
