--- a/src/locales/recap/nl.json
+++ b/src/locales/recap/nl.json
@@ -41,7 +41,8 @@
 			"replayTimeRecord": "Dit is de {numPlaysOrdinal} keer dat je deze exacte puzzel hebt opgelost. Je was {differenceSec}s sneller dan je snelste tijd.",
 			"timeRecord": "Je hebt je beste tijd verbeterd met {differenceSec}s!",
 			"timeRecordLarge": "Je was een ongelooflijke {improvementPercentage} sneller dan je vorige beste tijd!",
-			"top5Percent": "Geweldig gedaan! Je hebt deze puzzel sneller opgelost dan 95% van je eerder opgeloste puzzels."
+			"top5Percent": "Geweldig gedaan! Je hebt deze puzzel sneller opgelost dan 95% van je eerder opgeloste puzzels.",
+			"top5Time": "Gefeliciteerd! Je hebt een top {rank} tijd neergezet voor deze puzzel!"
 		},
 		"play-again": "Speel opnieuw",
 		"record": {
