Improved recap messages in both languages

--- a/src/locales/recap/en.json
+++ b/src/locales/recap/en.json
@@ -22,27 +22,27 @@
 		"difficulty-label": "Difficulty",
 		"fallbackCompliment": "Good job!",
 		"message": {
-			"almostTimeRecordAbsolute": "Ooph, so close to setting a new time record. You were only {differenceSec}s slower then your personal best.",
-			"almostTimeRecordPercentage": "You almost set a new time record! You were only {differencePercentage} slower.",
-			"betterThanAverage": "You were {differenceSec}s faster than your previous average.",
-			"firstOfDifficulty": "You've solved your first @:{difficultyKey} puzzle.",
-			"firstOfSize": "First time solving a {dimensions} puzzle.",
-			"firstOfSizeDifficulty": "First time solving a [{dimensions}] puzzle on @:{difficultyKey} difficulty.",
-			"firstTotal": "You've solved your first puzzle ever!",
-			"hardestEver": "This was the hardest puzzle you've ever solved, well done!",
-			"muchBetterThanAverageAbsolute": "You solved this puzzle faster than your average by an incredible {differenceSec}s!",
-			"muchBetterThanAveragePercentage": "That was much faster than average! You were {improvementPercentage} faster.",
-			"notAddedToDbCheats": "Puzzle was not saved in your history, because you used cheats.",
-			"playsConfigToday": "You've played {count} puzzles with {dimensions} dimensions today at @:{difficultyKey} difficulty.",
-			"playsConfigTotal": "You've solved a total of {count} puzzles with {dimensions} dimensions at @:{difficultyKey} difficulty.",
-			"playsToday": "Today, you've solved {totalSolvedToday} puzzles.",
-			"playsTotal": "You've solved a total of {totalSolved} puzzles now.",
-			"replayPlaysTotal": "This is the {numPlaysOrdinal} time you've solved this exact same puzzle, with your best time being {bestPreviousTimeMinSec}.",
-			"replayTimeRecord": "This is the {numPlaysOrdinal} time you solved this exact puzzle. You were {differenceSec}s faster than your fastest time.",
+			"almostTimeRecordAbsolute": "Oh, so close! You were just {differenceSec}s off setting a new personal record.",
+			"almostTimeRecordPercentage": "Nearly set a new personal best time! Just {differencePercentage} slower than your best.",
+			"betterThanAverage": "You were {differenceSec}s faster than your average time.",
+			"firstOfDifficulty": "You've solved your first '@:{difficultyKey}' puzzle.",
+			"firstOfSize": "This was the first time you solved a [{dimensions}] puzzle.",
+			"firstOfSizeDifficulty": "A first! You've completed your first [{dimensions}] puzzle on the '@:{difficultyKey}' difficulty level.",
+			"firstTotal": "Fantastic! You've solved your very first puzzle ever!",
+			"hardestEver": "You've just cracked your toughest puzzle ever. Well done!",
+			"muchBetterThanAverageAbsolute": "What an achievement! You were {differenceSec}s faster than your average time.",
+			"muchBetterThanAveragePercentage": "That was way faster than average! You were {improvementPercentage} faster.",
+			"notAddedToDbCheats": "This puzzle wasn't saved to your history because you've cheated.",
+			"playsConfigToday": "Today, you played {count} puzzles of [{dimensions}] size at '@:{difficultyKey}' difficulty.",
+			"playsConfigTotal": "In total, you've solved {count} puzzles of [{dimensions}] size at '@:{difficultyKey}' difficulty.",
+			"playsToday": "You've already solved {totalSolvedToday} puzzles today.",
+			"playsTotal": "Your total count of solved puzzles now stands at {totalSolved}.",
+			"replayPlaysTotal": "This is the {numPlaysOrdinal} time you've solved this exact puzzle. Your best time was {bestPreviousTimeMinSec}.",
+			"replayTimeRecord": "You've set a new personal best for this exact puzzle! This was the {numPlaysOrdinal} time solving it, and you were {differenceSec}s faster than your previous fastest time.",
 			"timeRecord": "You've improved your best time by {differenceSec}s!",
-			"timeRecordLarge": "You were an incredible {improvementPercentage} faster than your previous best time!",
-			"top5Percent": "Fantastic job! You've completed this puzzle faster than 95% of your previously solved puzzles.",
-			"top5Time": "Congratulations! You've achieved a top {rank} time for this puzzle."
+			"timeRecordLarge": "Incredible! You were {improvementPercentage} faster than your previous best time!",
+			"top5Percent": "Outstanding! Faster than 95% of your previously solved puzzles.",
+			"top5Time": "Top performance! This attempt ranks in your top {rank} times!"
 		},
 		"play-again": "Play again",
 		"record": {
