--- a/src/locales/recap/nl.json
+++ b/src/locales/recap/nl.json
@@ -22,27 +22,27 @@
 		"difficulty-label": "Niveau",
 		"fallbackCompliment": "Good gedaan!",
 		"message": {
-			"almostTimeRecordAbsolute": "Oef, zo dichtbij het zetten van een nieuw tijdrecord. Je was slechts {differenceSec}s langzamer dan je persoonlijk record.",
-			"almostTimeRecordPercentage": "Je was bijna een nieuw tijdrecord aan het zetten! Je was slechts {differencePercentage} langzamer.",
-			"betterThanAverage": "Je was {differenceSec}s sneller dan je vorige gemiddelde.",
+			"almostTimeRecordAbsolute": "Oh, zo dichtbij! Je was maar {differenceSec}s verwijderd van een nieuw persoonlijk record.",
+			"almostTimeRecordPercentage": "Bijna een nieuw record gevestigd! Slechts {differencePercentage} langzamer dan je beste tijd.",
+			"betterThanAverage": "Je was {differenceSec}s sneller dan je gemiddelde tijd.",
 			"firstOfDifficulty": "Je hebt je eerste puzzel op het '@:{difficultyKey}' niveau opgelost.",
-			"firstOfSize": "Eerste keer een {dimensions} puzzel opgelost.",
-			"firstOfSizeDifficulty": "Eerste keer een [{dimensions}] puzzel opgelost op het '@:{difficultyKey}' niveau.",
-			"firstTotal": "Je hebt je allereerste puzzel ooit opgelost!",
-			"hardestEver": "Dit was de moeilijkste puzzel die je ooit hebt opgelost, goed gedaan!",
-			"muchBetterThanAverageAbsolute": "Je hebt deze puzzel sneller opgelost dan je gemiddelde met een ongelooflijke {differenceSec}s!",
+			"firstOfSize": "Dit was de eerste keer dat je een [{dimensions}] puzzel hebt opgelost.",
+			"firstOfSizeDifficulty": "Een primeur! De eerste [{dimensions}] puzzel voltooid op '@:{difficultyKey}' niveau.",
+			"firstTotal": "Fantastisch! Je hebt je allereerste puzzel ooit opgelost!",
+			"hardestEver": "Je hebt zojuist je moeilijkste puzzel ooit gekraakt. Goed gedaan!",
+			"muchBetterThanAverageAbsolute": "Wat een prestatie! Je was {differenceSec}s sneller dan je gemiddelde tijd.",
 			"muchBetterThanAveragePercentage": "Dat was veel sneller dan gemiddeld! Je was {improvementPercentage} sneller.",
-			"notAddedToDbCheats": "Puzzel is niet opgeslagen in je geschiedenis, omdat je cheats hebt gebruikt.",
-			"playsConfigToday": "Je hebt vandaag {count} puzzels gespeeld met {dimensions} afmetingen op het @:{difficultyKey} niveau.",
-			"playsConfigTotal": "Je hebt in totaal {count} puzzels opgelost met {dimensions} afmetingen op het @:{difficultyKey} niveau.",
-			"playsToday": "Vandaag heb je {totalSolvedToday} puzzels opgelost.",
-			"playsTotal": "Je hebt nu in totaal {totalSolved} puzzels opgelost.",
-			"replayPlaysTotal": "Dit is de {numPlaysOrdinal} keer dat je deze exact dezelfde puzzel hebt opgelost, met je beste tijd zijnde {bestPreviousTimeMinSec}.",
-			"replayTimeRecord": "Dit is de {numPlaysOrdinal} keer dat je deze exacte puzzel hebt opgelost. Je was {differenceSec}s sneller dan je snelste tijd.",
+			"notAddedToDbCheats": "Deze puzzel is niet opgeslagen in je geschiedenis, omdat je cheats hebt gebruikt.",
+			"playsConfigToday": "Vandaag heb je {count} puzzels van [{dimensions}] gespeeld op het '@:{difficultyKey}' niveau.",
+			"playsConfigTotal": "Je hebt in totaal {count} puzzels van [{dimensions}] opgelost op het '@:{difficultyKey}' niveau.",
+			"playsToday": "Vandaag heb je al {totalSolvedToday} puzzels opgelost.",
+			"playsTotal": "Je teller van opgeloste puzzels in totaal staat nu op {totalSolved} puzzels.",
+			"replayPlaysTotal": "Dit is de {numPlaysOrdinal} keer dat je exact deze puzzel hebt opgelost. Je beste tijd was {bestPreviousTimeMinSec}.",
+			"replayTimeRecord": "Je hebt een beste tijd neergezet voor exact deze puzzel! Dit was de {numPlaysOrdinal} keer dat je deze hebt opgelost, en je was {differenceSec}s sneller dan je snelste tijd.",
 			"timeRecord": "Je hebt je beste tijd verbeterd met {differenceSec}s!",
-			"timeRecordLarge": "Je was een ongelooflijke {improvementPercentage} sneller dan je vorige beste tijd!",
-			"top5Percent": "Geweldig gedaan! Je hebt deze puzzel sneller opgelost dan 95% van je eerder opgeloste puzzels.",
-			"top5Time": "Gefeliciteerd! Je hebt een top {rank} tijd neergezet voor deze puzzel!"
+			"timeRecordLarge": "Geweldig! Je was een ongelofelijke {improvementPercentage} sneller dan je vorige beste tijd!",
+			"top5Percent": "Uitstekend! Sneller opgelost dan 95% van je eerder opgeloste puzzels.",
+			"top5Time": "Topprestatie! Deze poging staat in je top {rank} tijden!"
 		},
 		"play-again": "Speel opnieuw",
 		"record": {
