Better than average consecutively recap messages

--- a/src/locales/recap/en.json
+++ b/src/locales/recap/en.json
@@ -26,6 +26,9 @@
 			"almostTimeRecordAbsolute": "Oh, so close! You were just {differenceSec}s off setting a new personal record.",
 			"almostTimeRecordPercentage": "Nearly set a new personal best time! Just {differencePercentage} slower than your best.",
 			"betterThanAverage": "You were {differenceSec}s faster than your average time.",
+			"betterThanAverageConsecutivelyExact": "On a roll! You've outpaced your average solve time for {consecutiveTimes} puzzles straight. Keep the streak alive!",
+			"betterThanAverageConsecutivelyTenExact": "Incredible consistency! You've beaten your average time for {consecutiveTimes} consecutive puzzles. Can you extend this winning streak?",
+			"betterThanAverageConsecutivelyMoreThanTenTimes": "Astounding! You've bested your average solve time for over {consecutiveTimes} puzzles in a row. Your dedication is paying off!",
 			"firstOfDifficulty": "You've solved your first '@:{difficultyKey}' puzzle.",
 			"firstOfSize": "This was the first time you solved a [{dimensions}] puzzle.",
 			"firstOfSizeDifficulty": "A first! You've completed your first [{dimensions}] puzzle on the '@:{difficultyKey}' difficulty level.",
