--- a/src/locales/recap/nl.json
+++ b/src/locales/recap/nl.json
@@ -26,6 +26,9 @@
 			"almostTimeRecordAbsolute": "Oh, zo dichtbij! Je was maar {differenceSec}s verwijderd van een nieuw persoonlijk record.",
 			"almostTimeRecordPercentage": "Bijna een nieuw record gevestigd! Slechts {differencePercentage} langzamer dan je beste tijd.",
 			"betterThanAverage": "Je was {differenceSec}s sneller dan je gemiddelde tijd.",
+			"betterThanAverageConsecutivelyExact": "Op dreef! Je hebt je gemiddelde oplostijd voor {consecutiveTimes} puzzels op rij verslagen. Houd de reeks gaande!",
+			"betterThanAverageConsecutivelyTenExact": "Ongelooflijke consistentie! Je hebt je gemiddelde tijd voor {consecutiveTimes} opeenvolgende puzzels verslagen. Kun je deze winnende reeks voortzetten?",
+			"betterThanAverageConsecutivelyMoreThanTenTimes": "Verbazingwekkend! Je hebt je gemiddelde oplostijd voor meer dan {consecutiveTimes} puzzels achter elkaar overtroffen. Je inzet werpt zijn vruchten af!",
 			"firstOfDifficulty": "Je hebt je eerste puzzel op het '@:{difficultyKey}' niveau opgelost.",
 			"firstOfSize": "Dit was de eerste keer dat je een [{dimensions}] puzzel hebt opgelost.",
 			"firstOfSizeDifficulty": "Een primeur! De eerste [{dimensions}] puzzel voltooid op '@:{difficultyKey}' niveau.",
